--- a/CRUD-PRODUCTOS/productos/src/main/resources/application.yml
+++ b/CRUD-PRODUCTOS/productos/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: usuarios
+    name: productos
     #profiles:
     #  active: dev
   datasource:
@@ -18,4 +18,4 @@ spring:
       hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 
 server:
-  port: 8090
+  port: 8080
