--- a/CRUD-PRODUCTOS/productos/pom.xml
+++ b/CRUD-PRODUCTOS/productos/pom.xml
@@ -96,7 +96,11 @@
 			<artifactId>javax.persistence-api</artifactId>
 			<version>2.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>net.datafaker</groupId>
+			<artifactId>datafaker</artifactId>
+			<version>2.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
